// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header component Exercise name exist should match the snapshot 1`] = `
.css-1qqtemn,
[data-css-1qqtemn] {
  height: 107px;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  -webkit-box-pack: justify;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 20px;
  padding-left: 40px;
  -webkit-flex-flow: row wrap;
  -webkit-justify-content: space-between;
}

.css-1ulbvcw,
[data-css-1ulbvcw] {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-direction: column;
  -webkit-justify-content: space-between;
}

.css-1nxzm7d,
[data-css-1nxzm7d] {
  margin-left: -10px;
  margin-bottom: 35px;
  color: #919AA7;
}

.css-1ixk24o,
[data-css-1ixk24o] {
  text-transform: uppercase;
  color: #919AA7;
  font-size: 14px;
  font-weight: 700;
}

.css-1qe4ilz,
[data-css-1qe4ilz] {
  color: #5E6B7D;
  font-size: 23px;
}

<header
  data-css-1qqtemn=""
>
  <div
    className="left-side"
    data-css-1ulbvcw=""
  >
    <Icon
      color="red"
      data-css-1nxzm7d=""
      data-test="menu"
      iconName="menu"
      viewBox="0 0 24 24"
    />
    <div>
      <div
        data-css-1ixk24o=""
        data-test="date"
      >
        Saturday, Jul 15th
      </div>
      <div
        data-css-1qe4ilz=""
        data-test="currently"
      >
        Pull Up
      </div>
    </div>
  </div>
  <div>
    <UserImage />
  </div>
</header>
`;

exports[`Header component Shallow snapshot matches the previous 1`] = `
.css-1qqtemn,
[data-css-1qqtemn] {
  height: 107px;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  -webkit-box-pack: justify;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 20px;
  padding-left: 40px;
  -webkit-flex-flow: row wrap;
  -webkit-justify-content: space-between;
}

.css-1ulbvcw,
[data-css-1ulbvcw] {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-direction: column;
  -webkit-justify-content: space-between;
}

.css-1nxzm7d,
[data-css-1nxzm7d] {
  margin-left: -10px;
  margin-bottom: 35px;
  color: #919AA7;
}

.css-1ixk24o,
[data-css-1ixk24o] {
  text-transform: uppercase;
  color: #919AA7;
  font-size: 14px;
  font-weight: 700;
}

.css-1qe4ilz,
[data-css-1qe4ilz] {
  color: #5E6B7D;
  font-size: 23px;
}

<header
  data-css-1qqtemn=""
>
  <div
    className="left-side"
    data-css-1ulbvcw=""
  >
    <Icon
      color="red"
      data-css-1nxzm7d=""
      data-test="menu"
      iconName="menu"
      viewBox="0 0 24 24"
    />
    <div>
      <div
        data-css-1ixk24o=""
        data-test="date"
      >
        Saturday, Jul 15th
      </div>
      <div
        data-css-1qe4ilz=""
        data-test="currently"
      >
        Start Workout
      </div>
    </div>
  </div>
  <div>
    <UserImage />
  </div>
</header>
`;
